terraform_associate_2023/Read_generate_modify_conf/count-paremeter.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "instance-1" {
  ami           = "ami-082b5a644766e0e6f"
  instance_type = "t2.micro"
  count         = 3
}
