terraform_associate_2023/Read_generate_modify_conf/terraform_settings_demo.tf
terraform {
  required_providers {
    aws = "~> 2.0"
  }
}

provider "aws" {
  region     = "us-east-1"
}

resource "aws_instance" "myec2" {
   ami = "ami-0b1e534a4ff9019e0"
   instance_type = "t2.micro"
}
